@@ -1,3 +1,8 @@
+2006-04-03 Paul Jakma <paul.jakma@sun.com>
+
+	* quagga.xml.in: oops, ipvX-routing services don't exist yet in
+	  any Solaris builds.
+
 2006-03-16 Paul Jakma <paul.jakma@sun.com>
 
 	* prototype.smf.in: Oops, continue to install manifest to
